--- a/.github/actions/deps/action.yml
+++ b/.github/actions/deps/action.yml
@@ -46,7 +46,7 @@ runs:
       if: ${{ contains(inputs.runs-on, 'ubuntu') && contains(inputs.ccache-cache-name, 'aarch64') }}
       uses: awalsh128/cache-apt-pkgs-action@latest
       with:
-        packages: gcc-10-aarch64-linux-gnu g++-10-aarch64-linux-gnu libepoxy:arm64 pkg-config cmake ninja-build extra-cmake-modules dpkg-dev ccache
+        packages: gcc-10-aarch64-linux-gnu g++-10-aarch64-linux-gnu pkg-config cmake ninja-build extra-cmake-modules dpkg-dev ccache
         version: 1.0-arm
 
     - name: Set Up CCache
