--- a/.github/actions/deps/action.yml
+++ b/.github/actions/deps/action.yml
@@ -42,14 +42,7 @@ runs:
         packages: cmake ninja-build libepoxy-dev ccache
         version: 1.0
 
-    - name: Install Dependencies (Linux aarch64)
-      if: ${{ contains(inputs.runs-on, 'ubuntu') && contains(inputs.ccache-cache-name, 'aarch64') }}
-      uses: awalsh128/cache-apt-pkgs-action@latest
-      with:
-        packages: gcc-10-aarch64-linux-gnu g++-10-aarch64-linux-gnu pkg-config cmake ninja-build extra-cmake-modules dpkg-dev ccache
-        version: 1.0-arm
-
-    - name: Install Dependencies (Linux aarch64)
+    - name: Install Repositories (Linux aarch64)
       if: ${{ contains(inputs.runs-on, 'ubuntu') && contains(inputs.ccache-cache-name, 'aarch64') }}
       shell: bash
       run: |
@@ -57,9 +50,14 @@ runs:
         sudo sh -c "sed \"s|^deb \([a-z\.:/]*\) \([a-z\-]*\) \(.*\)$|deb [arch=amd64] \1 \2 \3\ndeb [arch=arm64] http://ports.ubuntu.com/ubuntu-ports \2 \3|\" /etc/apt/sources.list > /etc/apt/sources.list.new"
         sudo rm /etc/apt/sources.list
         sudo mv /etc/apt/sources.list{.new,}
-        sudo apt update
-        sudo apt search pkg-config
-        DEBIAN_FRONTEND=noninteractive sudo apt install -y pkg-config-aarch64-linux-gnu libepoxy-dev:arm64
+        sudo apt-get update
+
+    - name: Install Dependencies (Linux aarch64)
+      if: ${{ contains(inputs.runs-on, 'ubuntu') && contains(inputs.ccache-cache-name, 'aarch64') }}
+      uses: awalsh128/cache-apt-pkgs-action@latest
+      with:
+        packages: gcc-10-aarch64-linux-gnu g++-10-aarch64-linux-gnu pkg-config-aarch64-linux-gnu libepoxy-dev:arm64 pkg-config cmake ninja-build extra-cmake-modules dpkg-dev ccache
+        version: 2
 
     - name: Set Up CCache
       uses: hendrikmuhs/ccache-action@v1.2.9
