--- a/.github/actions/deps/action.yml
+++ b/.github/actions/deps/action.yml
@@ -50,14 +50,8 @@ runs:
         sudo sh -c "sed \"s|^deb \([a-z\.:/]*\) \([a-z\-]*\) \(.*\)$|deb [arch=amd64] \1 \2 \3\ndeb [arch=arm64] http://ports.ubuntu.com/ubuntu-ports \2 \3|\" /etc/apt/sources.list > /etc/apt/sources.list.new"
         sudo rm /etc/apt/sources.list
         sudo mv /etc/apt/sources.list{.new,}
-        sudo apt-get update
-
-    - name: Install Dependencies (Linux aarch64)
-      if: ${{ contains(inputs.runs-on, 'ubuntu') && contains(inputs.ccache-cache-name, 'aarch64') }}
-      uses: awalsh128/cache-apt-pkgs-action@latest
-      with:
-        packages: gcc-10-aarch64-linux-gnu g++-10-aarch64-linux-gnu pkg-config-aarch64-linux-gnu libepoxy-dev:arm64 pkg-config cmake ninja-build extra-cmake-modules dpkg-dev ccache
-        version: 2
+        sudo apt update
+        DEBIAN_FRONTEND=noninteractive sudo apt install -y {gcc-10,g++-10,pkg-config}-aarch64-linux-gnu {libsdl2,qtbase5,qtbase5-private,qtmultimedia5,libslirp,libarchive,libzstd}-dev:arm64 zstd:arm64 cmake extra-cmake-modules dpkg-dev
 
     - name: Set Up CCache
       uses: hendrikmuhs/ccache-action@v1.2.9
