--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -20,6 +20,9 @@ jobs:
       info-dir: info
       lib-ext: dll
       shell: msys2 {0}
+      ccache: sccache
+      cmake-args: -DENABLE_SCCACHE=ON
+      # Using sccache on Windows due to https://github.com/hendrikmuhs/ccache-action/issues/112
 
   macos:
     name: macOS (Universal)
