--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -2,6 +2,11 @@ name: Build (Internal)
 on:
   workflow_call:
     inputs:
+      ccache:
+        description: CCache variant
+        type: string
+        required: true
+        default: ccache
       cmake-args:
         description: Additional arguments to pass to CMake.
         type: string
@@ -79,6 +84,7 @@ jobs:
         uses: ./.github/actions/deps
         with:
           build-dir: ${{ env.BUILD_DIR }}
+          ccache: ${{ inputs.ccache }}
           ccache-cache-name: ${{ inputs.archive-name }}-${{ matrix.build-type }}
           runs-on: ${{ inputs.runs-on }}
 
