Set ccache input as optional

--- a/.github/actions/deps/action.yml
+++ b/.github/actions/deps/action.yml
@@ -6,7 +6,7 @@ inputs:
     required: true
   ccache:
     description: CCache variant
-    required: true
+    required: false
     default: ccache
   ccache-cache-name:
     description: CCache cache name
