--- a/.github/actions/deps/action.yml
+++ b/.github/actions/deps/action.yml
@@ -52,7 +52,13 @@ runs:
         sudo rm /etc/apt/sources.list
         sudo mv /etc/apt/sources.list{.new,}
         sudo apt update
-        DEBIAN_FRONTEND=noninteractive sudo apt install -y --no-install-suggests {gcc-10,g++-10,pkg-config}-aarch64-linux-gnu libepoxy-dev:arm64 zlib1g-dev:arm64 cmake dpkg-dev
+
+    - name: Install Dependencies (Linux aarch64)
+      if: ${{ contains(inputs.runs-on, 'ubuntu') && contains(inputs.ccache-cache-name, 'aarch64') }}
+      uses: awalsh128/cache-apt-pkgs-action@latest
+      with:
+        packages: --no-install-suggests gcc-10-aarch64-linux-gnu g++-10-aarch64-linux-gnu pkg-config-aarch64-linux-gnu libepoxy-dev:arm64 zlib1g-dev:arm64 cmake dpkg-dev
+        version: aarch64
 
     - name: Set Up CCache
       uses: hendrikmuhs/ccache-action@v1.2.9
