--- a/.github/actions/deps/action.yml
+++ b/.github/actions/deps/action.yml
@@ -57,7 +57,7 @@ runs:
       if: ${{ contains(inputs.runs-on, 'ubuntu') && contains(inputs.ccache-cache-name, 'aarch64') }}
       uses: awalsh128/cache-apt-pkgs-action@latest
       with:
-        packages: --no-install-suggests gcc-10-aarch64-linux-gnu g++-10-aarch64-linux-gnu pkg-config-aarch64-linux-gnu libepoxy-dev:arm64 zlib1g-dev:arm64 cmake dpkg-dev
+        packages: gcc-10-aarch64-linux-gnu g++-10-aarch64-linux-gnu pkg-config-aarch64-linux-gnu libepoxy-dev:arm64 zlib1g-dev:arm64 cmake dpkg-dev
         version: aarch64
 
     - name: Set Up CCache
