--- a/.github/actions/deps/action.yml
+++ b/.github/actions/deps/action.yml
@@ -51,14 +51,15 @@ runs:
         sudo sh -c "sed \"s|^deb \([a-z\.:/]*\) \([a-z\-]*\) \(.*\)$|deb [arch=amd64] \1 \2 \3\ndeb [arch=arm64] http://ports.ubuntu.com/ubuntu-ports \2 \3|\" /etc/apt/sources.list > /etc/apt/sources.list.new"
         sudo rm /etc/apt/sources.list
         sudo mv /etc/apt/sources.list{.new,}
-        sudo apt update
+        sudo apt-get update
+        sudo apt-get install -y libepoxy-dev:arm64 zlib1g-dev:arm64
 
     - name: Install Dependencies (Linux aarch64)
       if: ${{ contains(inputs.runs-on, 'ubuntu') && contains(inputs.ccache-cache-name, 'aarch64') }}
       uses: awalsh128/cache-apt-pkgs-action@latest
       with:
-        packages: gcc-10-aarch64-linux-gnu g++-10-aarch64-linux-gnu pkg-config-aarch64-linux-gnu libepoxy-dev:arm64 zlib1g-dev:arm64 cmake dpkg-dev
-        version: aarch64
+        packages: gcc-10-aarch64-linux-gnu g++-10-aarch64-linux-gnu pkg-config-aarch64-linux-gnu cmake dpkg-dev
+        version: aarch64-1
 
     - name: Set Up CCache
       uses: hendrikmuhs/ccache-action@v1.2.9
