Stop caching packages on the aarch64 workflow

--- a/.github/actions/deps/action.yml
+++ b/.github/actions/deps/action.yml
@@ -43,7 +43,7 @@ runs:
         packages: cmake ninja-build libepoxy-dev ccache
         version: 1.0
 
-    - name: Install Repositories (Linux aarch64)
+    - name: Install Dependencies (Linux aarch64)
       if: ${{ contains(inputs.runs-on, 'ubuntu') && contains(inputs.ccache-cache-name, 'aarch64') }}
       shell: bash
       run: |
@@ -52,14 +52,8 @@ runs:
         sudo rm /etc/apt/sources.list
         sudo mv /etc/apt/sources.list{.new,}
         sudo apt-get update
-        sudo apt-get install -y libepoxy-dev:arm64 zlib1g-dev:arm64
-
-    - name: Install Dependencies (Linux aarch64)
-      if: ${{ contains(inputs.runs-on, 'ubuntu') && contains(inputs.ccache-cache-name, 'aarch64') }}
-      uses: awalsh128/cache-apt-pkgs-action@latest
-      with:
-        packages: gcc-10-aarch64-linux-gnu g++-10-aarch64-linux-gnu pkg-config-aarch64-linux-gnu cmake dpkg-dev
-        version: aarch64-1
+        sudo apt-get install -y libepoxy-dev:arm64 zlib1g-dev:arm64 gcc-10-aarch64-linux-gnu g++-10-aarch64-linux-gnu pkg-config-aarch64-linux-gnu cmake dpkg-dev
+      # Caching cross-compiling packages is a huge pain in the ass, so let's not do it
 
     - name: Set Up CCache
       uses: hendrikmuhs/ccache-action@v1.2.9
