--- a/src/libretro/CMakeLists.txt
+++ b/src/libretro/CMakeLists.txt
@@ -141,3 +141,8 @@ target_compile_definitions(libretro PUBLIC MELONDSDS_VERSION="${CMAKE_PROJECT_VE
 target_compile_definitions(libretro PUBLIC MELONDSDS_NAME="${CMAKE_PROJECT_NAME}")
 
 target_link_libraries(libretro PUBLIC libretro-common core libretro-assets glm::glm_static)
+
+if (TRACY_ENABLE)
+    target_link_libraries(libretro PUBLIC TracyClient)
+    target_compile_definitions(libretro PUBLIC HAVE_TRACY)
+endif()
