Compile and link libslirp
- Including stubs for glib

--- a/src/libretro/CMakeLists.txt
+++ b/src/libretro/CMakeLists.txt
@@ -161,6 +161,10 @@ target_compile_definitions(libretro PUBLIC MELONDSDS_NAME="${CMAKE_PROJECT_NAME}
 
 target_link_libraries(libretro PUBLIC libretro-common core libretro-assets glm::glm_static)
 
+if (HAVE_NETWORKING)
+    target_link_libraries(libretro PUBLIC slirp)
+endif()
+
 if (TRACY_ENABLE)
     target_link_libraries(libretro PUBLIC TracyClient)
     target_compile_definitions(libretro PUBLIC HAVE_TRACY)
