--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -93,7 +93,7 @@ jobs:
 
       - name: Configure
         working-directory: "${{ env.BUILD_DIR }}"
-        run: cmake "${{ github.workspace }}" -DCMAKE_BUILD_TYPE="${{ matrix.build-type }}" -DMELONDS_REPOSITORY_URL:STRING=$MELONDS_REPOSITORY_URL -DMELONDS_REPOSITORY_TAG:STRING=$MELONDS_REPOSITORY_TAG ${{ inputs.cmake-args }}
+        run: cmake "${{ github.workspace }}" -DCMAKE_BUILD_TYPE="${{ matrix.build-type }}" -DMELONDS_REPOSITORY_URL:STRING="${{ vars.MELONDS_REPOSITORY_URL }}" -DMELONDS_REPOSITORY_TAG:STRING="${{ vars.MELONDS_REPOSITORY_TAG }}" ${{ inputs.cmake-args }}
 
       - name: Build
         working-directory: "${{ env.BUILD_DIR }}"
