Fix the Windows build

--- a/src/libretro/CMakeLists.txt
+++ b/src/libretro/CMakeLists.txt
@@ -158,12 +158,17 @@ endif()
 
 target_compile_definitions(libretro PUBLIC MELONDSDS_VERSION="${CMAKE_PROJECT_VERSION}")
 target_compile_definitions(libretro PUBLIC MELONDSDS_NAME="${CMAKE_PROJECT_NAME}")
+target_compile_definitions(libretro PUBLIC BUILDING_LIBSLIRP)
+
+target_link_libraries(libretro PUBLIC libretro-common core libretro-assets glm::glm_static)
 
 if (HAVE_NETWORKING)
     target_link_libraries(libretro PUBLIC slirp)
-endif()
 
-target_link_libraries(libretro PUBLIC libretro-common core libretro-assets glm::glm_static)
+    if (WIN32)
+        target_link_libraries(libretro PRIVATE ws2_32 iphlpapi)
+    endif()
+endif()
 
 if (TRACY_ENABLE)
     target_link_libraries(libretro PUBLIC TracyClient)
