Update file-flushing code

--- a/src/libretro/CMakeLists.txt
+++ b/src/libretro/CMakeLists.txt
@@ -17,8 +17,7 @@ add_library(libretro MODULE
     environment.hpp
     exceptions.cpp
     exceptions.hpp
-    fat.cpp
-    fat.hpp
+    file.hpp
     gba.cpp
     gba.hpp
     glsym_private.cpp
