Split constant-related code from config.cpp into a new file

--- a/src/libretro/CMakeLists.txt
+++ b/src/libretro/CMakeLists.txt
@@ -9,6 +9,8 @@ add_library(libretro MODULE
     buffer.hpp
     config.cpp
     config.hpp
+    config/constants.cpp
+    config/constants.hpp
     content.cpp
     content.hpp
     dsi.cpp
