--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -32,6 +32,7 @@ jobs:
       runs-on: macos-latest
       lib-ext: dylib
       cmake-args: -DCMAKE_OSX_ARCHITECTURES:STRING="arm64;x86_64" -DENABLE_OGLRENDERER=OFF
+      # Disabled OpenGL on macOS due to https://github.com/JesseTG/melonds-ds/issues/12
 
   linux-x86_64:
     name: Linux (x86_64)
@@ -59,6 +60,7 @@ jobs:
       lib-name: melondsds_libretro
       cmake-args: -DENABLE_OGLRENDERER=OFF -DANDROID_ABI=arm64-v8a -DANDROID_PLATFORM=24 -DCMAKE_TOOLCHAIN_FILE="$ANDROID_NDK/build/cmake/android.toolchain.cmake"
       runs-on: ubuntu-latest
+      # Disabled OpenGL on Android due to https://github.com/JesseTG/melonds-ds/issues/23
 
   ios:
     name: iOS
@@ -70,3 +72,4 @@ jobs:
       lib-ext: dylib
       lib-name: melondsds_libretro_ios
       cmake-args: -DENABLE_OGLRENDERER=OFF -DENABLE_JIT=OFF --toolchain ./cmake/toolchain/ios.toolchain.cmake -DPLATFORM=OS64 -DCMAKE_OSX_DEPLOYMENT_TARGET:STRING=13.0 -DDEPLOYMENT_TARGET=13 -DENABLE_STRICT_TRY_COMPILE_INT:BOOL=ON
+      # Disabled OpenGL on iOS due to https://github.com/JesseTG/melonds-ds/issues/23
