Specify sscache explicitly

--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -21,7 +21,7 @@ jobs:
       lib-ext: dll
       shell: msys2 {0}
       ccache: sccache
-      cmake-args: -DENABLE_SCCACHE=ON
+      cmake-args: -DENABLE_SCCACHE=ON -DSCCACHE="C:/Users/runneradmin/.cargo/bin/sccache.exe"
       # Using sccache on Windows due to https://github.com/hendrikmuhs/ccache-action/issues/112
 
   macos:
