Move definitions of the save managers to a new file

--- a/src/libretro/CMakeLists.txt
+++ b/src/libretro/CMakeLists.txt
@@ -58,6 +58,8 @@ add_library(libretro MODULE
     retro/task_queue.hpp
     screenlayout.cpp
     screenlayout.hpp
+    sram.cpp
+    sram.hpp
     tracy.hpp
     utils.cpp
     utils.hpp
