Add some more variables to the tests
- Pass the paths to the BIOS files as environment variables to the wrapper script
- Add the target file as a test dependency
- Add support for regular expressions

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -50,7 +50,7 @@ include(CMakePrintHelpers)
 function(add_retroarch_test)
     set(options )
     set(oneValueArgs NAME MAX_FRAMES CONTENT)
-    set(multiValueArgs APPEND_CONFIG CORE_OPTION REQUIRED_FILE)
+    set(multiValueArgs CORE_OPTION REQUIRED_FILE PASS_REGULAR_EXPRESSION FAIL_REGULAR_EXPRESSION SKIP_REGULAR_EXPRESSION)
     cmake_parse_arguments(PARSE_ARGV 0 RETRO "${options}" "${oneValueArgs}" "${multiValueArgs}")
 
     if (NOT RETRO_MAX_FRAMES)
@@ -67,10 +67,32 @@ function(add_retroarch_test)
     )
 
     list(APPEND REQUIRED_FILES "${RETRO_CONTENT}")
-    cmake_print_variables(RETRO_APPEND_CONFIG RETRO_CORE_OPTION RETRO_REQUIRED_FILE REQUIRED_FILES)
+    list(APPEND REQUIRED_FILES "${RETRO_REQUIRED_FILE}")
+    list(APPEND REQUIRED_FILES "$<TARGET_FILE:libretro>")
 
-    set_tests_properties("${RETRO_NAME}" PROPERTIES ENVIRONMENT "RETROARCH=${RETROARCH};${RETRO_CORE_OPTION}")
+    list(APPEND ENVIRONMENT "RETROARCH=${RETROARCH}")
+    list(APPEND ENVIRONMENT ${RETRO_CORE_OPTION}) # Not an omission, this is already a list
+    list(APPEND ENVIRONMENT "ARM7_BIOS=${ARM7_BIOS}")
+    list(APPEND ENVIRONMENT "ARM9_BIOS=${ARM9_BIOS}")
+    list(APPEND ENVIRONMENT "ARM7_DSI_BIOS=${ARM7_DSI_BIOS}")
+    list(APPEND ENVIRONMENT "ARM9_DSI_BIOS=${ARM9_DSI_BIOS}")
+    list(APPEND ENVIRONMENT "NDS_FIRMWARE=${NDS_FIRMWARE}")
+    list(APPEND ENVIRONMENT "DSI_FIRMWARE=${DSI_FIRMWARE}")
+    list(APPEND ENVIRONMENT "DSI_NAND=${DSI_NAND}")
+
+    set_tests_properties("${RETRO_NAME}" PROPERTIES ENVIRONMENT "${ENVIRONMENT}")
     set_tests_properties("${RETRO_NAME}" PROPERTIES REQUIRED_FILES "${REQUIRED_FILES}")
+    if (RETRO_PASS_REGULAR_EXPRESSION)
+        set_tests_properties("${RETRO_NAME}" PROPERTIES PASS_REGULAR_EXPRESSION "${RETRO_PASS_REGULAR_EXPRESSION}")
+    endif()
+
+    if (RETRO_FAIL_REGULAR_EXPRESSION)
+        set_tests_properties("${RETRO_NAME}" PROPERTIES FAIL_REGULAR_EXPRESSION "${RETRO_FAIL_REGULAR_EXPRESSION}")
+    endif()
+
+    if (RETRO_SKIP_REGULAR_EXPRESSION)
+        set_tests_properties("${RETRO_NAME}" PROPERTIES SKIP_REGULAR_EXPRESSION "${RETRO_SKIP_REGULAR_EXPRESSION}")
+    endif()
 endfunction()
 
 add_retroarch_test(
