--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -46,9 +46,9 @@ find_bios(DSI_NAND dsi_nand.bin 251658304 DSI_NAND_HASHES)
 include(CMakePrintHelpers)
 
 function(add_retroarch_test)
-    set(options WILL_FAIL)
+    set(options WILL_FAIL ARM7_BIOS ARM9_BIOS ARM7_DSI_BIOS ARM9_DSI_BIOS NDS_FIRMWARE DSI_FIRMWARE DSI_NAND)
     set(oneValueArgs NAME MAX_FRAMES CONTENT)
-    set(multiValueArgs CORE_OPTION REQUIRED_FILE PASS_REGULAR_EXPRESSION FAIL_REGULAR_EXPRESSION SKIP_REGULAR_EXPRESSION)
+    set(multiValueArgs CORE_OPTION PASS_REGULAR_EXPRESSION FAIL_REGULAR_EXPRESSION SKIP_REGULAR_EXPRESSION)
     cmake_parse_arguments(PARSE_ARGV 0 RETRO "${options}" "${oneValueArgs}" "${multiValueArgs}")
 
     if (NOT RETRO_MAX_FRAMES)
@@ -64,19 +64,28 @@ function(add_retroarch_test)
             "${RETRO_CONTENT}"
     )
 
-    list(APPEND REQUIRED_FILES "${RETRO_CONTENT}")
-    list(APPEND REQUIRED_FILES "${RETRO_REQUIRED_FILE}")
     list(APPEND REQUIRED_FILES "$<TARGET_FILE:libretro>")
+    if (RETRO_CONTENT)
+        list(APPEND REQUIRED_FILES "${RETRO_CONTENT}")
+    endif()
 
     list(APPEND ENVIRONMENT "RETROARCH=${RETROARCH}")
     list(APPEND ENVIRONMENT ${RETRO_CORE_OPTION}) # Not an omission, this is already a list
-    list(APPEND ENVIRONMENT "ARM7_BIOS=${ARM7_BIOS}")
-    list(APPEND ENVIRONMENT "ARM9_BIOS=${ARM9_BIOS}")
-    list(APPEND ENVIRONMENT "ARM7_DSI_BIOS=${ARM7_DSI_BIOS}")
-    list(APPEND ENVIRONMENT "ARM9_DSI_BIOS=${ARM9_DSI_BIOS}")
-    list(APPEND ENVIRONMENT "NDS_FIRMWARE=${NDS_FIRMWARE}")
-    list(APPEND ENVIRONMENT "DSI_FIRMWARE=${DSI_FIRMWARE}")
-    list(APPEND ENVIRONMENT "DSI_NAND=${DSI_NAND}")
+
+    macro(expose_system_file SYSFILE)
+        if (RETRO_${SYSFILE})
+            list(APPEND REQUIRED_FILES "${${SYSFILE}}")
+            list(APPEND ENVIRONMENT "${SYSFILE}=${${SYSFILE}}")
+        endif()
+    endmacro()
+
+    expose_system_file(ARM7_BIOS)
+    expose_system_file(ARM9_BIOS)
+    expose_system_file(ARM7_DSI_BIOS)
+    expose_system_file(ARM9_DSI_BIOS)
+    expose_system_file(NDS_FIRMWARE)
+    expose_system_file(DSI_FIRMWARE)
+    expose_system_file(DSI_NAND)
 
     set_tests_properties("${RETRO_NAME}" PROPERTIES ENVIRONMENT "${ENVIRONMENT}")
     set_tests_properties("${RETRO_NAME}" PROPERTIES REQUIRED_FILES "${REQUIRED_FILES}")
